# tonic-chat

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
examples/: README.md
examples/client/: Cargo.toml  build.rs
examples/client/src/: main.rs
proto/: chat.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: main.rs
