[package]
name = "tonic-chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "io-std"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[build-dependencies]
tonic-build = "0.10"
