[package]
name = "tonic-chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.34", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"

[build-dependencies]
tonic-build = "0.10"
